...
        case .grinderTimer: return "Grinder Timer".localized
        case .dose: return "Dose".localized
        case .time: return "Brew time".localized
        case .preInfusionTime: return "Pre-infusion time".localized
        case .brewPressure: return "Brew pressure".localized
        case .yield: return "Brewed Amount".localized
        case .gear: return "Equipment (Bean/Grinder/Machine)".localized
        case .brewer: return "Brewer Selection".localized
        case .bloom: return "Bloom Details".localized
        case .totalWater: return "Total Water".localized
        case .waterTemp: return "Water Temperature".localized
        case .notes: return "Notes".localized
        case .rating: return "Rating".localized
...
